--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "eslint": "^7.29.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
+    "file-loader": "^6.2.0",
     "style-loader": "^3.0.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
