--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "^3.19.0",
     "webpack": "^5.41.1",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "name": "resturant-page",
   "description": "",
@@ -312,7 +313,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "start": "webpack server --mode development --open"
   },
   "repository": {
     "type": "git",
@@ -325,3 +328,5 @@
   },
   "homepage": "https://github.com/JulianaOsemeke/Resturant-Page#readme"
 }
+
+
